--- a/employee_management_system/src/pages/login/login.html
+++ b/employee_management_system/src/pages/login/login.html
@@ -24,14 +24,14 @@
                     <div class="form-group">
                         <div class="input-wrapper">
                             <i class="bi bi-envelope input-icon"></i>
-                            <input type="email" id="email" placeholder="Email address" required>
+                            <input type="email" id="email" placeholder="Email address" required value="admin@gmail.com">
                         </div>
                     </div>
                     
                     <div class="form-group">
                         <div class="input-wrapper">
                             <i class="bi bi-lock input-icon"></i>
-                            <input type="password" id="password" placeholder="Password" required>
+                            <input type="password" id="password" placeholder="Password" required value="admin">
                             <button type="button" id="togglePassword" class="toggle-password">
                                 <i class="bi bi-eye-slash"></i>
                             </button>
