--- a/employee_management_system/src/pages/home_screen/home_screen.html
+++ b/employee_management_system/src/pages/home_screen/home_screen.html
@@ -10,6 +10,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
 </head>
 <body>
+    <!-- Add Mobile Navigation Toggle -->
+    <button class="mobile-nav-toggle btn" id="mobileNavToggle">
+        <i class="bi bi-list fs-4"></i>
+    </button>
+
     <div class="wrapper">
         <!-- Include standardized sidebar -->
         <nav class="sidebar" id="sidebar">
@@ -53,7 +58,8 @@
                 </div>
                 
                 <div class="row g-4 mb-4">
-                    <div class="col-md-4">
+                    <!-- Make cards more responsive -->
+                    <div class="col-12 col-sm-6 col-lg-4">
                         <div class="card stats-card h-100">
                             <div class="card-body p-4">
                                 <div class="d-flex flex-column">
@@ -63,7 +69,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-12 col-sm-6 col-lg-4">
                         <div class="card h-100">
                             <div class="card-body p-4">
                                 <h5 class="card-title text-muted mb-2">Departments</h5>
@@ -71,7 +77,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-12 col-sm-6 col-lg-4">
                         <div class="card h-100">
                             <div class="card-body p-4">
                                 <h5 class="card-title text-muted mb-2">Average Salary</h5>
@@ -83,30 +89,48 @@
 
                 <div class="card">
                     <div class="card-header">
-                        <div class="d-flex justify-content-between align-items-center">
+                        <div class="d-flex flex-column flex-md-row justify-content-between align-items-md-center gap-3">
                             <div>
-                                <h5 class="fw-bold mb-1">Recent Employees</h5>
-                                <p class="text-muted small mb-0">Last 30 days</p>
+                                <h5 class="fw-bold mb-1">Employee List</h5>
+                                <p class="text-muted small mb-0">Manage your employees</p>
                             </div>
-                            <button class="btn btn-primary d-flex align-items-center gap-2">
-                                <span>View All</span>
-                                <i class="bi bi-arrow-right"></i>
-                            </button>
+                            <div class="d-flex flex-column flex-md-row gap-2">
+                                <div class="input-group">
+                                    <input type="text" class="form-control" id="searchEmployee" placeholder="Search employee...">
+                                    <button class="btn btn-outline-secondary" type="button">
+                                        <i class="bi bi-search"></i>
+                                    </button>
+                                </div>
+                                <button class="btn btn-primary d-flex align-items-center gap-2 w-100 w-md-auto" onclick="window.location.href='/employee_management_system/src/pages/register_employee/register_employee.html'">
+                                    <i class="bi bi-plus-lg"></i>
+                                    <span>Add Employee</span>
+                                </button>
+                            </div>
                         </div>
                     </div>
                     <div class="card-body">
                         <div class="table-responsive">
-                            <table class="table">
+                            <table class="table align-middle">
                                 <thead>
                                     <tr>
-                                        <th>Name</th>
-                                        <th>Position</th>
-                                        <th>Department</th>
-                                        <th>Start Date</th>
+                                        <th class="sortable" data-sort="firstName">First Name <i class="bi bi-arrow-down-up"></i></th>
+                                        <th class="sortable" data-sort="lastName">Last Name <i class="bi bi-arrow-down-up"></i></th>
+                                        <th class="sortable" data-sort="status">Status</th>
+                                        <th class="sortable" data-sort="position">Position</th>
+                                        <th class="sortable" data-sort="department">Department</th>
+                                        <th class="sortable" data-sort="startDate">Start Date</th>
+                                        <th class="sortable" data-sort="salary">Salary</th>
+                                        <th>Actions</th>
                                     </tr>
                                 </thead>
                                 <tbody id="employeesList">
-                                    <!-- Employee data will be populated here -->
+                                    <tr id="loadingRow">
+                                        <td colspan="8" class="text-center py-4">
+                                            <div class="spinner-border text-primary" role="status">
+                                                <span class="visually-hidden">Loading...</span>
+                                            </div>
+                                        </td>
+                                    </tr>
                                 </tbody>
                             </table>
                         </div>
