--- a/root/index.html
+++ b/root/index.html
@@ -7,7 +7,7 @@
     <script>
         // Redirect to login page
         window.onload = function() {
-            window.location.href = '/src/pages/login/login.html';
+            window.location.href = '/DeveloperTesting/src/pages/login/login.html';
         }
     </script>
 </head>
